k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moniqofi
  labels:
    app: moniqofi
