k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: moniqofi
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: moniqofi
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
